# samd-timer

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: aliases.js  index.md  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Binary.js  trait.Debug.js  trait.LowerHex.js  trait.Octal.js  trait.UpperHex.js
docs/implementors/core/hash/: trait.Hash.js
docs/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/implementors/samd_timer/control/: trait.TCCInstance.js
docs/samd21g18a/: all.html  index.html  sidebar-items.js  struct.TC.html
docs/samd21g18a/config/: enum.CaptureMode.html  enum.CaptureTrigger.html  enum.Direction.html  enum.Dither.html  enum.OutputMatrixConfig.html  enum.Prescaler.html  enum.Ramp.html  enum.Synchronization.html  enum.TimerMode.html  enum.TimerWaveGen.html  index.html  sidebar-items.js  struct.Channels.html  struct.Count16.html  struct.Count32.html  struct.Count8.html  struct.DTIEnable.html  struct.TC.html  struct.TCC.html  struct.TimerConfig.html  struct.WaveformSelect.html  trait.CountMode.html
docs/samd21g18a/config/samd21/: struct.TC.html
docs/samd21g18a/config/types/: enum.CaptureMode.html  enum.CaptureTrigger.html  enum.Direction.html  enum.Dither.html  enum.OutputMatrixConfig.html  enum.Prescaler.html  enum.Ramp.html  enum.Synchronization.html  enum.TimerMode.html  enum.TimerWaveGen.html  struct.Channels.html  struct.DTIEnable.html  struct.WaveformSelect.html
docs/samd21g18a/control/: enum.WaveformGen.html  index.html  sidebar-items.js  struct.ControlTimer.html  struct.Interrupts.html  struct.TCC0_1.html  struct.TCC2_3.html  struct.WaveformSelect.html  trait.TCCInstance.html
docs/samd21g18a/timer/: index.html  sidebar-items.js  struct.Interrupts.html  struct.TC0_1.html  struct.TC2_3.html  struct.TC4_5.html  struct.Timer.html
docs/src/samd_timer/: control.rs.html  lib.rs.html
src/: control.rs  lib.rs  timer.rs
src/config/: mod.rs  samd21.rs  samx5x.rs  types.rs
src/control/: mod.rs  samd21.rs  samx5x.rs
src/timer/: mod.rs  samd21.rs  samx5x.rs
(+21 files in other folders)
