[package]
name = "samd-timer"
version = "0.3.0"
description = "High-level API for the TC/TCC peripherals found on the Microchip SAM MCUs."
authors = ["Adam Jacobus"]
repository = "https://github.com/proman21/samd-timer"
readme = "README.md"
edition = "2018"
categories = ["embedded", "no-std", "hardware-support"]
license = "MIT"

[dependencies]
bitflags = "1.2.1"
smart-default = "0.6.0"
atsamd-hal = "0.12.0"
paste = "0.1.7"

[dependencies.atsamd51j]
version = "0.9.0"
optional = true

[dependencies.atsamd51g]
version = "0.9.0"
optional = true

[dependencies.atsamd21g]
version = "0.9.0"
optional = true

[dependencies.atsamd21e]
version = "0.9.0"
optional = true

[dependencies.atsamd21j]
version = "0.9.0"
optional = true

[features]
samd21 = []
samd21g = ["atsamd21g", "atsamd-hal/samd21g", "samd21"]
samd21e = ["atsamd21e", "atsamd-hal/samd21e", "samd21"]
samd21j = ["atsamd21j", "atsamd-hal/samd21j", "samd21"]
samx5x = []
samd51j = ["atsamd51j", "atsamd-hal/samd51j", "samx5x"]
samd51g = ["atsamd51g", "atsamd-hal/samd51g", "samx5x"]